clang/test/BSC/Negative/Ownership/Borrow/borrow_check_rules/cstyle_cast_in_callexpr/cstyle_cast_in_callexpr.cbs
// RUN: %clang_cc1 -verify %s

int *borrow foo(int *borrow p, int *borrow q);

void test(int *p) {
  int *borrow m = foo((int *borrow)p, (int *borrow)p); // expected-error {{cannot borrow `*p` as mutable more than once at a time}} // expected-note {{first mut borrow occurs here}}                              
  *m = 2;
} 